llvm-toolchain: update description

--- a/src/llvm-toolchain/devcontainer-feature.json
+++ b/src/llvm-toolchain/devcontainer-feature.json
@@ -2,7 +2,7 @@
     "name": "llvm-toolchain",
     "id": "llvm-toolchain",
     "version": "1.0.0",
-    "description": "A hello world feature",
+    "description": "import llvm toolchain",
     "options": {
         "llvm_version": {
             "type": "string",
