llvm-toolchain: add clangd extension

--- a/src/llvm-toolchain/devcontainer-feature.json
+++ b/src/llvm-toolchain/devcontainer-feature.json
@@ -21,5 +21,12 @@
     },
     "installsAfter": [
         "ghcr.io/devcontainers/features/common-utils"
-    ]
+    ],
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "llvm-vs-code-extensions.vscode-clangd"
+            ]
+        }
+    }
 }
